<resources>
    <string name="app_name">Blipic</string>

    <!--Utils-->
    <string name="KEYWORD_OK">OK</string>
    <string name="ALERT_TITLE_WARNING">Oops!</string>
    <string name="ALERT_BLANK_FIELDS">Please fill all the blanks.</string>
    <string name="REQUEST_UNPERFORMED">Unable to perform request.</string>
    <string name="ALERT_CONFIRM_MESSAGE">Please check your inbox to confirm your email address before logging in</string>
    <string name="ALERT_CONFIRM_TITLE">Registration successful</string>
    <string name="ALERT_FORGOT_MESSAGE">Password reset link has been sent to your email.</string>
    <string name="ALERT_FORGOT_TITLE">Forgot password</string>
    <string name="ALERT_RESENT_EMAIL_TITLE">Email sent</string>

    <!--Login Screen-->
    <string name="btn_login">LOGIN</string>
    <string name="txt_or">or</string>
    <string name="btn_create_an_account">Create an Account</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_forgot_password">Forgot Your Password?</string>
    <string name="txt_recover_password">Enter email adress, please</string>

    <!--Side Menu-->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_create_activity">Create Activity</string>
    <string name="nav_stuff">My Stuff</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_random1">Random1</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_notifications1">Notifications1</string>
    <string name="nav_mystaff1">MyStaff1</string>

    <string name="google_api_key">AIzaSyCQMaECCk9B4VXW4jr_HBaRyy0nzEFO5oI</string>
    <string name="google_maps_api_key">AIzaSyBNw4ujRje__VQk-7SvbzPpcnnrjiRKuzU</string>

    <!--Home Screen-->
    <string name="search_activities_around_you">Search activities around you</string>
    <string name="search_locations">Search locations</string>
    <string name="search_this_area">Search This Area</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="current_location">Current Location</string>

    <string name="kWeatherAPIClientId">xxrRiH9Daq9GF1JT7mR1v</string>
    <string name="kWeatherAPIClientSecret">KNoGVDjcsJjFRiJRhDmQdT2YxGMCf2plw4ZpeTh7</string>

</resources>
