<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/sm_activities"
            android:title="@string/nav_discover" />
    </group>
    <group android:id="@+id/nav_group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_activity"
            android:icon="@drawable/sm_activities"
            android:title="@string/nav_create_activity" />
    </group>
    <group android:id="@+id/nav_group3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mytickets"
            android:icon="@drawable/sm_stuff"
            android:title="@string/nav_stuff" />
    </group>
    <group android:id="@+id/nav_group4" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/sm_notification"
            android:title="@string/nav_notification" />
    </group>
    <group android:id="@+id/nav_group5" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sm_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
