<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_login_button"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/My_ImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/field_login"
            android:adjustViewBounds="true" />

        <EditText
            android:id="@+id/txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_login_email"
            android:layout_marginTop="@dimen/signup_field_height"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/btn_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:background="?android:selectableItemBackground"
            android:clickable="true" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="?android:selectableItemBackground"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>